[tool.poetry]
name = "take-home"
version = "0.1.0"
description = ""
authors = ["agahEbrahimi <agahebr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.16.1"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
